-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
1240a440f2 (qt/qtdeclarative/dev) 99d30cc6e7 (qt/qtdeclarative/6.2) 1ddf33ac4d (qt/qtdeclarative/6.3)
Running qmlscene on test.qml triggers the assertion
ASSERT: "!unNormalizedUrl.isRelative() && (QQmlFile::urlToLocalFileOrQrc(unNormalizedUrl).isEmpty() || !QDir::isRelativePath(QQmlFile::urlToLocalFileOrQrc(unNormalizedUrl)))" in file /home/fabian/projects/qtdev/qtdeclarative/src/qml/qml/qqmltypeloader.cpp, line 846
- resulted from
-
QTBUG-98033 Documentation bug: import from absolute path requires file://... network syntax
-
- Reported
-