src/qml/qml/qqmlimport.cpp
@@ -1393,6 +1393,18 @@ QTypeRevision QQmlImportsPrivate::addFileImport(
         const QString& uri, const QString &prefix, QTypeRevision version, uint flags,
         QQmlImportDatabase *database, QList<QQmlError> *errors)
 {
+    if (uri.startsWith(Slash) || uri.startsWith(Colon)) {
+        QQmlError error;
+        const QString fix = uri.startsWith(Slash) ? QLatin1String("file:") + uri
+                                                  : QLatin1String("qrc") + uri;
+        error.setDescription(QQmlImportDatabase::tr(
+                                 "\"%1\" is not a valid import URL. "
+                                 "You can pass relative paths or URLs with schema, but not "
+                                 "absolute paths or resource paths. Try \"%2\".").arg(uri, fix));
+        errors->prepend(error);
+        return QTypeRevision();
+    }
+
     Q_ASSERT(errors);
 
     QQmlImportNamespace *nameSpace = importNamespace(prefix);
