tests/auto/qml/qqmlimport/data/absoluteImport.qml
@@ -1,0 +1,4 @@
+import "/foo/bar/baz"
+
+QtObject {}
+
