tests/auto/qml/qqmlimport/data/relativeResourceImport.qml
@@ -1,0 +1,4 @@
+import ":relative/resource/path"
+
+QtObject {}
+
